Add a functioning map

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+<!-- async defer breaks the script -->
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb8Dd6XE-l5e_eCFrYOa2iy-xVcjnIjVk&v=3&callback=initMap">
+    </script>
+
   </body>
 </html>
