--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
 <!-- async defer breaks the script -->
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb8Dd6XE-l5e_eCFrYOa2iy-xVcjnIjVk&v=3&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBb8Dd6XE-l5e_eCFrYOa2iy-xVcjnIjVk&v=3">
     </script>
 
   </body>
